# cu-hackthelaw-26

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  architecture-diagram.mmd  architecture.md  current_progress.md  docker-compose.yml  final_harvey_benchmark_results.md  marketing.md  pricing.md  todo.md
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: celery_app.py  config.py  main.py
backend/app/core/: audit.py  auth.py  background.py  celery_app.py  context.py  logging.py  redis.py  stream.py  tasks.py
backend/app/db/: repo.py  supabase.py  tables.py
backend/app/fixtures/: __init__.py  associates.json  corpus.json  mock_plan.json  mock_reviews.json
backend/app/providers/: base.py  cellar.py  factory.py  mock.py
backend/app/schemas/: models.py
backend/app/services/: checker.py  coordinator.py  debrief.py  documents.py  pipeline.py  planner.py  ranker.py  seed.py  storage.py  task_spec.py  track_record.py  views.py  worker.py
backend/app/tasks/: agents.py  common.py  signals.py  watchdog.py
backend/app/tests/: conftest.py  test_cellar.py  test_checker.py  test_dispatch.py  test_documents.py  test_flexible_worker.py  test_flow.py  test_health.py  test_pingpong.py  test_pipeline.py  test_process_maps.py  test_ranker.py  test_tasks_api.py  test_track_record.py  test_with_ai_lane.py
backend/harvey_eval/: EU_TASKS.md  TASKS_USED.md  TRACK_C_PLAN.md  batch.py  batch_results.jsonl  catalogue_eu.py  eu_corpus.json  eu_group_1.json  eu_group_2.json  eu_group_3.json  eu_group_4.json  eu_group_5.json  eu_tasks.json  eval_report_gdpr-enforcement-guidance.md  evaluation.md  metering.py  run.py  run_planned.py  score.py
backend/harvey_eval/track_c/: correlate.py  grade.py  grader_correlation_report.md  grader_prompt.md  grader_results.jsonl  planner_batch.py  planner_sonnet5_grades.jsonl  planner_sonnet5_results.md  quality.py  results.jsonl  (+1 more)
(+59 files in other folders)
